b=144823 Localized certificate name is garbled, unable to send out signed/encrypted mail on a localized build r=javi sr=mscott